@@ -1,4 +1,5 @@
 0.28
+ - Add check_sense() to Utils.
  - Fix doc in Wikibase::Datatype::Value::Property.
 
 0.27 2023-04-22T19:14:08+02:00
